--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Set Environment Variables
+      run: echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> $GITHUB_ENV
+
     - name: Install Dependencies
       run: |
         cd client
